# BatPU-2-rs

./: .gitignore  Cargo.toml  README.md  batpu
batpu2/: Cargo.toml
batpu2-cli/: Cargo.toml
batpu2-cli/src/: arguments.rs  asm.rs  collect_ex.rs  main.rs  run.rs
batpu2/src/: char.rs  lib.rs  utils.rs
batpu2/src/asm/: assembler.rs  ast.rs  mod.rs  parser.rs
batpu2/src/asm_old/: assembler.rs  ast.rs  mod.rs
batpu2/src/isa/: common.rs  macros.rs  mod.rs
batpu2/src/vm/: code.rs  flags.rs  mod.rs
batpu2/src/vm/io/: char.rs  embedded.rs  mod.rs
programs/: 2048-2.mc  dvd.mc  test.mc
